fix z-index on cta button

--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -11,4 +11,9 @@
     color: $primary;
     background-color: $white;
   }
+
+  &--above {
+    position: relative;
+    z-index: 10;
+  }
 }
