--- a/styles/styles.css
+++ b/styles/styles.css
@@ -245,6 +245,10 @@ body {
   color: #5468E7;
   background-color: #FFFFFF;
 }
+.button--above {
+  position: relative;
+  z-index: 10;
+}
 
 .footer {
   margin-top: 40px;
